--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@amf/mf-footer",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve -- --port 8082",
     "start:standalone": "webpack serve --env standalone",
     "build": "concurrently npm:build:*",
     "build:webpack": "webpack --mode=production",
